1.add sys model and sys base function 2.add rgb led hal

--- a/firmware/smart_baji/components/baji_sys/CMakeLists.txt
+++ b/firmware/smart_baji/components/baji_sys/CMakeLists.txt
@@ -1,12 +1,8 @@
-set(srcs "src/hal_init.c"
-         "src/hal_led.c"
-         )
+set(srcs "")
 
 set(public_include "inc")
 
-set(requires baji_sys led_strip)
-
 idf_component_register(SRCS ${srcs}
                        INCLUDE_DIRS ${public_include}
-                       REQUIRES ${requires}
+                       REQUIRES 
                       )
