--- a/firmware/smart_baji/components/baji_hal/CMakeLists.txt
+++ b/firmware/smart_baji/components/baji_hal/CMakeLists.txt
@@ -6,7 +6,7 @@ set(srcs "src/hal_init.c"
 
 set(public_include "inc")
 
-set(requires baji_sys led_strip driver fatfs)
+set(requires baji_sys led_strip driver fatfs esp_adc)
 
 idf_component_register(SRCS ${srcs}
                        INCLUDE_DIRS ${public_include}
