1.optimize buzzer hal name

--- a/firmware/smart_baji/components/baji_hal/CMakeLists.txt
+++ b/firmware/smart_baji/components/baji_hal/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(srcs "src/hal_init.c"
          "src/hal_encoder.c"
-         "src/hal_buzz.c"
+         "src/hal_buzzer.c"
          "src/hal_bat.c"
          "src/hal_led.c"
          "src/hal_sd.c"
