--- a/firmware/smart_baji/main/idf_component.yml
+++ b/firmware/smart_baji/main/idf_component.yml
@@ -15,3 +15,4 @@ dependencies:
   #   # All dependencies of `main` are public by default.
   #   public: true
   espressif/led_strip: ^3.0.1
+  espressif/button: ^3.5.0
