1. Optimize code format 2. Add service layer basic framework 3. Improve system call relationship

--- a/firmware/smart_baji/components/baji_service/CMakeLists.txt
+++ b/firmware/smart_baji/components/baji_service/CMakeLists.txt
@@ -1,8 +1,12 @@
-set(srcs "")
+set(srcs "src/service_init.c"
+         "src/service_display.c"
+         )
 
 set(public_include "inc")
 
+set(requires baji_hal baji_sys )
+
 idf_component_register(SRCS ${srcs}
                        INCLUDE_DIRS ${public_include}
-                       REQUIRES 
+                       REQUIRES ${requires}
                       )
