1.add lcd init function

--- a/firmware/smart_baji/components/baji_hal/CMakeLists.txt
+++ b/firmware/smart_baji/components/baji_hal/CMakeLists.txt
@@ -5,11 +5,12 @@ set(srcs "src/hal_init.c"
          "src/hal_led.c"
          "src/hal_lcd.c"
          "src/hal_sd.c"
+         "src/hal_nv3007.c"
          )
 
 set(public_include "inc")
 
-set(requires baji_sys led_strip driver fatfs esp_adc button)
+set(requires baji_sys led_strip driver fatfs esp_adc button esp_lvgl_port)
 
 idf_component_register(SRCS ${srcs}
                        INCLUDE_DIRS ${public_include}
