1.add display service and init lvgl framework

--- a/firmware/smart_baji/components/baji_service/CMakeLists.txt
+++ b/firmware/smart_baji/components/baji_service/CMakeLists.txt
@@ -4,7 +4,7 @@ set(srcs "src/service_init.c"
 
 set(public_include "inc")
 
-set(requires baji_hal baji_sys )
+set(requires baji_hal baji_sys esp_lvgl_port)
 
 idf_component_register(SRCS ${srcs}
                        INCLUDE_DIRS ${public_include}
