1.add basic app service

--- a/firmware/smart_baji/components/baji_service/CMakeLists.txt
+++ b/firmware/smart_baji/components/baji_service/CMakeLists.txt
@@ -1,10 +1,11 @@
 set(srcs "src/service_init.c"
+         "src/service_app.c"
          "src/service_display.c"
          )
 
 set(public_include "inc")
 
-set(requires baji_hal baji_sys baji_ui esp_lvgl_port)
+set(requires baji_hal baji_sys esp_lvgl_port)
 
 idf_component_register(SRCS ${srcs}
                        INCLUDE_DIRS ${public_include}
