--- a/firmware/smart_baji/components/baji_sys/CMakeLists.txt
+++ b/firmware/smart_baji/components/baji_sys/CMakeLists.txt
@@ -3,7 +3,7 @@ set(srcs "src/sys_init.c"
 
 set(public_include "inc")
 
-set(requires baji_hal baji_service)
+set(requires baji_hal baji_ui baji_service)
 
 idf_component_register(SRCS ${srcs}
                        INCLUDE_DIRS ${public_include}
